--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.1",
+    "@stripe/stripe-js": "^4.1.0",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.397.0",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.3.0"
+    "react-hot-toast": "^2.4.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "stripe": "^16.2.0",
+    "tailwind-merge": "^2.3.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
