--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.1",
     "@stripe/stripe-js": "^4.1.0",
+    "@typescript-eslint/typescript-estree": "^7.16.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.397.0",
